python/tests/gold/linkerdheadermapping/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: Module\nname: ambassador\nconfig:\n  add_linkerd_headers: true\nambassador_id: linkerdheadermapping\n---\napiVersion: ambassador/v1\nkind: Mapping\nname: linkerdheadermapping-http-addlinkerdonly\nprefix: /target_add_linkerd_header_only/\nservice: linkerdheadermapping-http-addlinkerdonly\nambassador_id: linkerdheadermapping\n---\napiVersion: ambassador/v1\nkind: Mapping\nname: linkerdheadermapping-http-nohea [...]
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: Module\\nname: ambassador\\nconfig:\\n  add_linkerd_headers: true\\nambassador_id: linkerdheadermapping\\n---\\napiVersion: ambassador/v1\\nkind: Mapping\\nname: linkerdheadermapping-http-addlinkerdonly\\nprefix: /target_add_linkerd_header_only/\\nservice: linkerdheadermapping- [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:35Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "linkerdheadermapping",
                        "scope": "AmbassadorTest"
                    },
                    "name": "linkerdheadermapping",
                    "namespace": "default",
                    "resourceVersion": "59844",
                    "selfLink": "/api/v1/namespaces/default/services/linkerdheadermapping",
                    "uid": "e1719a49-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.103.142.189",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 30025,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 31036,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "linkerdheadermapping"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"linkerdheadermapping\",\"scope\":\"AmbassadorTest\",\"service\":\"linkerdheadermapping-admin\"},\"name\":\"linkerdheadermapping-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"linkerdheadermapping-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"linkerdheadermapping\ [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:35Z",
                    "labels": {
                        "kat-ambassador-id": "linkerdheadermapping",
                        "scope": "AmbassadorTest",
                        "service": "linkerdheadermapping-admin"
                    },
                    "name": "linkerdheadermapping-admin",
                    "namespace": "default",
                    "resourceVersion": "59854",
                    "selfLink": "/api/v1/namespaces/default/services/linkerdheadermapping-admin",
                    "uid": "e1af1b57-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.96.89.8",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "linkerdheadermapping-admin",
                            "nodePort": 30997,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "linkerdheadermapping"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"linkerdheadermapping\",\"scope\":\"AmbassadorTest\"},\"name\":\"linkerdheadermapping-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8110},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8473}],\"selector\":{\"backe [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:36Z",
                    "labels": {
                        "kat-ambassador-id": "linkerdheadermapping",
                        "scope": "AmbassadorTest"
                    },
                    "name": "linkerdheadermapping-http",
                    "namespace": "default",
                    "resourceVersion": "59863",
                    "selfLink": "/api/v1/namespaces/default/services/linkerdheadermapping-http",
                    "uid": "e20bc56e-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.110.9.54",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8110
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8473
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"linkerdheadermapping\",\"scope\":\"AmbassadorTest\"},\"name\":\"linkerdheadermapping-http-addlinkerdonly\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8112},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8475}],\"sele [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:37Z",
                    "labels": {
                        "kat-ambassador-id": "linkerdheadermapping",
                        "scope": "AmbassadorTest"
                    },
                    "name": "linkerdheadermapping-http-addlinkerdonly",
                    "namespace": "default",
                    "resourceVersion": "59882",
                    "selfLink": "/api/v1/namespaces/default/services/linkerdheadermapping-http-addlinkerdonly",
                    "uid": "e3012d8b-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.99.6.148",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8112
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8475
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"linkerdheadermapping\",\"scope\":\"AmbassadorTest\"},\"name\":\"linkerdheadermapping-http-noheader\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8111},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8474}],\"selector\" [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:36Z",
                    "labels": {
                        "kat-ambassador-id": "linkerdheadermapping",
                        "scope": "AmbassadorTest"
                    },
                    "name": "linkerdheadermapping-http-noheader",
                    "namespace": "default",
                    "resourceVersion": "59873",
                    "selfLink": "/api/v1/namespaces/default/services/linkerdheadermapping-http-noheader",
                    "uid": "e27c70a8-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.103.57.37",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8111
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8474
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
